# ChangeLog for dev-util/geany-plugins
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Dec 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.18.ebuild:
  Keyworded amd64.

  01 Dec 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded x86.

  21 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Dropped x86 from geany-plugins-0.17.1, unfortunately a shadowed geany
  ebuild with stable keywords caused me to fail to notice the unstabilised
  dependency when committing d6a502c7.

  16 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild,
  geany-plugins-0.18.ebuild:
  Restrict plugins to related geany version or later.

*geany-plugins-0.18 (16 Nov 2009)

  16 Nov 2009; James Rowe <jnrowe@gmail.com> +geany-plugins-0.18.ebuild:
  Version bump [dc6].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded x86.

  03 Oct 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Install docs to /usr/share/doc/.

  27 Sep 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.17.1.ebuild:
  Keyworded ~x86.

*geany-plugins-0.17.1 (24 Sep 2009)

  24 Sep 2009; James Rowe <jnrowe@gmail.com> +geany-plugins-0.17.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
