@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST geany-plugins-0.17.1.tar.bz2 539864 RMD160 fca17fe17070d24f42d59b21bb3cdac2f61f909b SHA1 0911b46308990ba535439d3b8e31d5a1df965597 SHA256 5a0aebd2e97669b5c2b6ee06904c7513474104ddbb033e5f5b698941c2a724e6
 DIST geany-plugins-0.18.tar.bz2 681074 RMD160 266265fb95c3dca8ab43d9927583ad1a271205c3 SHA1 4649900ec521d4d2b69c3deb10df9058b5d82d9b SHA256 a65e8b05c238cb782632b27e2ceb9ce347ae723f4a281c04fc2bf00345ecbc97
-EBUILD geany-plugins-0.17.1.ebuild 947 RMD160 58fe649991f444cdde35a8d7b9292ec93a97e0ef SHA1 511bde5f0e4a01ac3378d33b179c2c57926fc30f SHA256 88a0fe2d1f936377b467e97e30dafd0591d100a683ee2965e6433c8158a6761b
-EBUILD geany-plugins-0.18.ebuild 954 RMD160 227941714c17a736057ec07aa95bed5019b6cc3a SHA1 c8084433d0c53ebbb79685914b2be42cb0c9a180 SHA256 838f565823b5fb0b17956e9633424ab8617fe6cfaf34770269c5e522df3f1630
-MISC ChangeLog 1498 RMD160 97d36ebd801621e6b91e70d4c11d6068d61d82cb SHA1 305721fa4ff3fc0de482eeac970131e1b80168cb SHA256 3640d62737290f5cb5922c3c30852d11db9d4a604f8f3ce01220e8a5d7ee0573
+EBUILD geany-plugins-0.18.ebuild 953 RMD160 c6ec070c3d4d9e18b8115bac079cbfa4210966c8 SHA1 ac45cf6cc9206f7590c0cf72d53fe53da6d8bae5 SHA256 dd0200e8517f27847f3a48dfc7d497635de4172a64a30d1d6c056bede5e88cb6
+MISC ChangeLog 1620 RMD160 682993180e51f0557ac54dc6c079f3e6986cae87 SHA1 bbfc6d1c0e67cecf9194639787d04eb618d8b8ee SHA256 a2afe24f7f81ff2c783523b78b329fd8becd40bdbf18017871db13eef4028595
 MISC metadata.xml 434 RMD160 10e3d2d19be250b2545bda99f172fb6ce924f1ea SHA1 84f47a64062094bcd28109e0fcf2de0cd128469f SHA256 86aeb34b8d1160293eecd9843adb09cc60df8c2c882a264032ca3232b43cbef1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkso1vsACgkQzJrj3cAXR0m8NQCfTI3c4xVh1QrTJGC6KVMbHfSN
-6mcAnRMXvHzZzzgNwMKp3p1yQkMGy9tl
-=lchF
+iEYEARECAAYFAkso2i4ACgkQzJrj3cAXR0kvNgCdE2scjH/6AB54yLPKlrpRGlcW
++bcAnArRN0AERqRkjbooAWbCyIfF6f/A
+=CGUC
 -----END PGP SIGNATURE-----
