@@ -12,7 +12,7 @@ SRC_URI="${HOMEPAGE}/${P}.tar.bz2"
 
 LICENSE="GPL-2 GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="lua nls spell test"
 
 DEPEND="${RDEPEND}
