@@ -1,4 +1,3 @@
-REM 2009-12-16 +1 MSG Stabilise x86 dev-util/geany-plugins-0.18 %a
 REM 2009-12-16 +1 MSG Stabilise x86 media-gfx/sphinxcontrib-aafig-1.0 %a
 REM 2009-12-17 +1 MSG Stabilise amd64 x11-wm/matwm2-0.0.87 %a
 REM 2009-12-17 +1 MSG Stabilise x86 x11-wm/matwm2-0.0.87 %a
