@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Dec 2009; James Rowe <jnrowe@gmail.com> -geany-plugins-0.17.1.ebuild,
+  geany-plugins-0.18.ebuild:
+  Keyworded x86.
+
   16 Dec 2009; James Rowe <jnrowe@gmail.com> geany-plugins-0.18.ebuild:
   Keyworded amd64.
 
